...
    return Scaffold(
      appBar: AppBar(
        title: Text("Support Dashboard - User ID: ${widget.id}"),
        automaticallyImplyLeading: false,
        actions: [
          IconButton(
            key: const Key('ButtonLogOut'),
            icon: Icon(Icons.exit_to_app),
            tooltip: 'Logout',
            onPressed: () => Navigator.pushNamedAndRemoveUntil(
                context, '/', (route) => false),
          ),
        ],
...
