...
                ));
      case '/signup':
        return MaterialPageRoute(builder: (context) => const SignupScreen());
      case '/coordinator':
        return MaterialPageRoute(
            builder: (context) => const CoordinatorDashboard(
                  key: Key("CDashboard"),
                ));
      case '/support':
        final args = settings.arguments as Map<String, dynamic>?;
        String id = args?['supportUserId'] ?? '0';
        return MaterialPageRoute(
          builder: (context) => SupportDashboard(id: id),
...
